Fix button icon alignment

--- a/Resources/public/scss/modules/sub-items-list/_table.view.columns.toggler.scss
+++ b/Resources/public/scss/modules/sub-items-list/_table.view.columns.toggler.scss
@@ -6,6 +6,8 @@
     align-items: center;
 
     &__btn {
+        display: flex;
+        justify-content: center;
         padding: calculateRem(5px);
         height: calculateRem(32px);
         width: calculateRem(32px);
